docs: Add min-height to the banner to avoid jumping content

--- a/site/src/theme/DocSidebar/styles.module.css
+++ b/site/src/theme/DocSidebar/styles.module.css
@@ -6,6 +6,7 @@
 .extra {
 	display: flex;
 	justify-content: center;
+	min-height: 12rem;
 	background-color: var(--ifm-color-white);
 }
 
